Made footer bigger for three column mode, now settings, + and editor footer are all lined nicely

--- a/frontend/app/src/static/app/lists/listEditor.html
+++ b/frontend/app/src/static/app/lists/listEditor.html
@@ -62,7 +62,7 @@
     swiper-click="containerClick($event.target.disabled, 'list')">
     <div class="swiper-wrapper">
       <div class="swiper-slide" swiper-slide="listEditor/basic" slide-index="0">
-        <div ng-style="{'padding-bottom': showListEditorComponent('basicFooter') ? EDITOR_FOOTER_HEIGHT : 0}"
+        <div ng-style="{'padding-bottom': showListEditorComponent('basicFooter') ? getEditorFooterHeight() : 0}"
           class="container-content" drawer-override-aisle="right" ng-init="drawerAisleInitialized = true"
           scroll-then-toggle="listEditorTitlebarTitle" scroll-then-toggle-top="listEditorTitleInput"
           scroll-then-toggle-resizeable="listEditorTitleInput"
