--- a/frontend/app/src/static/app/user/userEditor.html
+++ b/frontend/app/src/static/app/user/userEditor.html
@@ -10,7 +10,7 @@
      </div>
   </header>
 
-  <div ng-if="mode === 'agendaCalendar'" ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}"
+  <div ng-if="mode === 'agendaCalendar'" ng-style="{'padding-bottom': getEditorFooterHeight()}"
     class="container-fluid--inner">
 
     <div class="container-content" drawer-override-aisle="right">
