--- a/frontend/app/src/static/app/main/menu.html
+++ b/frontend/app/src/static/app/main/menu.html
@@ -6,19 +6,22 @@
       <span class="text-navigation-menu-small" clamp=1 ng-bind="getActiveDisplayName()"></span>
     </a>
 
-    <a href class="link-menu separate row" ng-click="gotoFeature('focus')"
+    <a href class="link-menu separate row active-under-modal" ng-click="gotoFeature('focus')"
       ng-class="isFeatureActive('focus') && 'highlighted'">
       <span class="text-navigation-menu">focus</span>
     </a>
-    <a href class="link-menu row" ng-click="gotoFeature('inbox')"
+    <a href class="link-menu row active-under-modal" ng-click="gotoFeature('inbox')"
       ng-class="{'highlighted': isFeatureActive('inbox'),
                  'invisible': features.inbox.getStatus() === 'disabled',
                  'onboarding': isOnboarding('inbox')}">
       <span class="text-navigation-menu">inbox</span>
     </a>
-    <a href class="link-menu row" ng-click="gotoFeature('tasks')"
+    <a href class="link-menu row active-under-modal" ng-click="gotoFeature('tasks')"
       ng-class="{'highlighted': isFeatureActive('tasks'), 'onboarding': isOnboarding('tasks', 'all')}">
       <span class="text-navigation-menu">tasks</span>
+    </a>
+    <a href class="link-menu row active-under-modal" ng-click="openModal($event)">
+      <span class="text-navigation-menu">modal</span>
     </a>
     <div ng-if="useContexts()" class="container-menu--extras">
       <div ng-if="isContextActive()" class="group-mixed small">
@@ -48,13 +51,13 @@
         </div>
       </div>
     </div>
-    <a href class="link-menu row" ng-click="gotoFeature('notes')"
+    <a href class="link-menu row active-under-modal" ng-click="gotoFeature('notes')"
       ng-class="{'highlighted': isFeatureActive('notes'),
                  'invisible': features.notes.getStatus() === 'disabled',
                  'onboarding': isOnboarding('notes')}">
       <span class="text-navigation-menu">notes</span>
     </a>
-    <a href class="link-menu row" ng-click="gotoFeature('lists')"
+    <a href class="link-menu row active-under-modal" ng-click="gotoFeature('lists')"
       ng-class="{'highlighted': isFeatureActive('lists'),
                 'invisible': features.lists.getStatus('active') === 'disabled',
                 'onboarding': isOnboarding('lists', 'active')}">
