Fixed description label visible on tag editor desktop

--- a/frontend/app/src/static/app/base/tagEditor.html
+++ b/frontend/app/src/static/app/base/tagEditor.html
@@ -58,7 +58,7 @@
           </a>
         </div>
 
-        <div ng-if="focusedTextProperty === 'description'" class="group-symmetrical--right">
+        <div ng-if="showEditorComponent('label')" class="group-symmetrical--right">
           <div class="text-field--label-wrapper">
             <span ng-bind="'descrip' + (columns === 1 ? '-\n' : '') + 'tion'"
               class="text-field--label-bold">
