Fixed large star alignment on desktop

--- a/frontend/app/src/static/app/base/tagEditor.html
+++ b/frontend/app/src/static/app/base/tagEditor.html
@@ -76,7 +76,7 @@
       scroll-then-toggle-reset="registerGotoTagTitleCallback">
 
       <!-- TITLE -->
-      <div ng-show="showEditorProperty('title')" class="row-top-parent">
+      <div ng-show="showEditorProperty('title')">
         <div class="group-mixed large">
           <div class="group-mixed--middle">
             <label for="tagEditorTitlebarTitle" class="text-prefixed--label large"
